tests/fail/stable/invalid_type_in_placeholder.rs
fn main() {
    sscanf::scanf!("hi", "{.}");
    sscanf::scanf!("hi", "{bob}");
    sscanf::scanf!("hi", "{.:/hi/}");
    sscanf::scanf!("hi", "{bob:/hi/}");
}
